--- a/TableHelperApp/App.config
+++ b/TableHelperApp/App.config
@@ -1,6 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="TableHelperApp.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <System.Windows.Forms.ApplicationConfigurationSection>
+      <add key="DpiAwareness" value="PerMonitorV2" />
+    </System.Windows.Forms.ApplicationConfigurationSection>  
+    <userSettings>
+        <TableHelperApp.Properties.Settings>
+            <setting name="tableWidth" serializeAs="String">
+                <value>800</value>
+            </setting>
+            <setting name="tableBorder" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="tableTitle" serializeAs="String">
+                <value>TECHNICAL SPECIFICATIONS</value>
+            </setting>
+        </TableHelperApp.Properties.Settings>
+    </userSettings>
 </configuration>
